--- a/components/albums/build.gradle
+++ b/components/albums/build.gradle
@@ -13,4 +13,6 @@ dependencies {
     compile "org.slf4j:slf4j-api:$slf4jVersion"
     compile "com.amazonaws:aws-java-sdk:1.11.74"
     compile "org.apache.tika:tika-core:1.14"
+
+    testCompile "junit:junit:4.12"
 }
