--- a/components/movies/build.gradle
+++ b/components/movies/build.gradle
@@ -1,6 +1,8 @@
 apply from: "../../java.gradle"
 
 dependencies {
+    compile project(":components:movie-fun-api")
+
     compile "org.springframework:spring-core:$springVersion"
     compile "org.springframework:spring-context:$springVersion"
     compile "org.springframework:spring-tx:$springVersion"
