--- a/manifest.yml
+++ b/manifest.yml
@@ -5,19 +5,20 @@ services:
 - movie-fun-sso
 - movie-fun-registry
 applications:
-- name: album-service
-  path: applications/album-service/build/libs/album-service-1.1.0-SNAPSHOT.jar
-  services:
-  - album-database
-  env:
-    GRANT_TYPE: client_credentials
-- name: movie-service
-  path: applications/movie-service/build/libs/movie-service-1.1.0-SNAPSHOT.jar
-  services:
-  - movie-database
-  env:
-    GRANT_TYPE: client_credentials
+#- name: album-service
+#  path: applications/album-service/build/libs/album-service-1.1.0-SNAPSHOT.jar
+#  host: album-service-jb
+#  services:
+#  - album-database
+#  env:
+#    GRANT_TYPE: client_credentials
+#- name: movie-service
+#  path: applications/movie-service/build/libs/movie-service-1.1.0-SNAPSHOT.jar
+#  host: movie-service-jb
+#  services:
+#  - movie-database
+#  env:
+#    GRANT_TYPE: client_credentials
 - name: movie-fun-app
   path: applications/movie-fun-app/build/libs/movie-fun-app-1.1.0-SNAPSHOT.war
-  services:
-  - movie-fun-config
+  host: moviefun-jb
