--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 buildscript {
     ext {
-        springBootVersion = "1.4.2.RELEASE"
-        springVersion = "4.3.4.RELEASE"
-        springCloudVersion = "Camden.SR3"
+        springBootVersion = "1.5.3.RELEASE"
+        springVersion = "4.3.8.RELEASE"
+        springCloudVersion = "Dalston.SR1"
         springCloudSsoVersion = "1.1.0.RELEASE"
-        springCloudServicesVersion = "1.3.1.RELEASE"
+        springCloudServicesVersion = "1.4.1.RELEASE"
         springSecurityVersion = "4.1.3.RELEASE"
 
         hibernateVersion = "5.0.11.Final"
